# graphico

./: .gitignore  Cargo.toml
mcps/user-graphico-mcp/tools/: create_nodes_bulk.json  graphico_create_nodes_bulk.json
src/: demo.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  snapshot.rs  state.rs
src/camera/: components.rs  mod.rs  systems.rs
src/graph/: components.rs  events.rs  mod.rs  model.rs  overlaps.rs  systems.rs
src/layout/: engine.rs  forces.rs  mod.rs  params.rs  placement.rs  quadtree.rs
src/persist/: mod.rs
src/render/: edges.rs  labels.rs  lod.rs  mod.rs  nodes.rs
src/spatial/: grid.rs  mod.rs  systems.rs
src/ui/: fix_overlaps.rs  inspector.rs  minimap.rs  mod.rs  selection.rs
