[package]
name = "graphico"
version = "0.1.0"
edition = "2024"

[features]
demo = ["dep:ureq"]

[dependencies]
anyhow = "1"
bevy = "0.18"
rand = "0.9"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
ureq = { version = "3", features = ["json"], optional = true }

[[bin]]
name = "graphico-mcp"
path = "src/bin/graphico-mcp.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
